--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -9,8 +9,33 @@ a{
    text-decoration: none;
 }
 .top{
+   font-size: 60px;
    color: #FD9940;
-  font-family: serif;
+   font-family: Arvo;
+  font-weight: bold;
+  text-shadow:
+    -3px -3px 0 #222,
+    3px -3px 0 #222,
+    -3px 3px 0 #222,
+    3px 3px 0 #222,
+    4px 4px 0 #FD9940,
+    5px 5px 0 #FD9940,
+    6px 6px 0 #FD9940,
+    7px 7px 0 #FD9940;
+  line-height: 0.8em;
+  letter-spacing: 0.1em;
+  transform: scaleY(0.7);
+  -webkit-transform: scaleY(0.7);
+  -moz-transform: scaleY(0.7);
+
+}
+@media screen and (max-width:780px) {
+   .top{
+      font-size: 30px;
+      transform: scaleY(0.8);
+      -webkit-transform: scaleY(0.8);
+      -moz-transform: scaleY(0.8);
+   }
 }
 header{
    display: flex;
@@ -18,7 +43,7 @@ header{
   justify-content: end;
   align-items: center;
   padding: 8px 19px;
-  background: #fff;
+  background:#FFF1AB;
   border-top: solid 5px #FD9940;
   border-bottom: solid 5px #FD9940;
 }
@@ -39,9 +64,10 @@ header{
    width: 100%;
    height: 10%;
    padding: 8px 19px;
-   background: #fff;
+   background: #FFF1AB;
    border-top: solid 5px #FD9940;
    border-bottom: solid 5px #FD9940;
+   position: fixed;
 }
 .home{
    font-size: 20px;
@@ -53,7 +79,6 @@ header{
    margin-top: 20px;
 }
 .account{
-  
    font-size: 20px;
    margin-top: 20px;
 }
