--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -12,21 +12,21 @@ a{
    font-size: 60px;
    color: #FD9940;
    font-family: Arvo;
-  font-weight: bold;
-  text-shadow:
-    -3px -3px 0 #222,
-    3px -3px 0 #222,
-    -3px 3px 0 #222,
-    3px 3px 0 #222,
-    4px 4px 0 #FD9940,
-    5px 5px 0 #FD9940,
-    6px 6px 0 #FD9940,
-    7px 7px 0 #FD9940;
-  line-height: 0.8em;
-  letter-spacing: 0.1em;
-  transform: scaleY(0.7);
-  -webkit-transform: scaleY(0.7);
-  -moz-transform: scaleY(0.7);
+   font-weight: bold;
+   text-shadow:
+   -3px -3px 0 #222,
+   3px -3px 0 #222,
+   -3px 3px 0 #222,
+   3px 3px 0 #222,
+   4px 4px 0 #FD9940,
+   5px 5px 0 #FD9940,
+   6px 6px 0 #FD9940,
+   7px 7px 0 #FD9940;
+   line-height: 0.8em;
+   letter-spacing: 0.1em;
+   transform: scaleY(0.7);
+   -webkit-transform: scaleY(0.7);
+   -moz-transform: scaleY(0.7);
 
 }
 @media screen and (max-width:780px) {
@@ -40,18 +40,24 @@ a{
 header{
    display: flex;
    flex-direction: row;
-  justify-content: end;
-  align-items: center;
-  padding: 8px 19px;
-  background:#FFF1AB;
-  border-top: solid 5px #FD9940;
-  border-bottom: solid 5px #FD9940;
+   justify-content: end;
+   align-items: center;
+   padding: 8px 19px;
+   background:#FFF1AB;
+   border-top: solid 5px #FD9940;
+   border-bottom: solid 5px #FD9940;
 }
 .login{
    margin-left: 42%;
    color: #FD9940;
    display: flex;
    flex-direction: column;
+}
+.log{
+   color: #FD9940;
+}
+.sign{
+   color: #FD9940;
 }
 .underbar{
    color: #FD9940;
@@ -63,22 +69,25 @@ header{
    bottom: 0; 
    width: 100%;
    height: 10%;
-   padding: 8px 19px;
+   padding: 8px 0px;
    background: #FFF1AB;
    border-top: solid 5px #FD9940;
    border-bottom: solid 5px #FD9940;
    position: fixed;
 }
 .home{
+   color: #FD9940;
    font-size: 20px;
-   margin-top: 20px;
+   margin-top: 25px;
    
 }
 .search{
+   color: #FD9940;
    font-size: 20px;
-   margin-top: 20px;
+   margin-top: 25px;
 }
 .account{
+   color: #FD9940;
    font-size: 20px;
-   margin-top: 20px;
+   margin-top: 25px;
 }
