--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -1,6 +1,7 @@
 h1{
-   color: red;
+   text-align: center;
 }
-body{
-   background-color: salmon;
+.order-detail{
+   padding-top: 150px;
+   text-align: center;
 }
