blade.phpの見た目を編集

--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -5,3 +5,15 @@ h1{
    padding-top: 150px;
    text-align: center;
 }
+
+.order-menu{
+   padding-bottom: 40px;
+}
+.quantity{
+   padding-bottom: 40px;
+}
+
+.btn{
+   padding-top: 50px;
+   text-align: center;
+}
