--- a/public/css/user.css
+++ b/public/css/user.css
@@ -14,6 +14,9 @@ a{
    justify-content: center;
    align-items: center;
 }
+.account{
+   text-align: center;
+}
 a{
    color: #000000;
 }
@@ -26,8 +29,32 @@ h2{
 .edit{
    display: flex;
    flex-direction: row;
-   justify-content: end;
+   justify-content: center;
+   margin-bottom: 50px;
 }
+.edit-btn{
+   padding-top: 30px;
+}
+.btn{
+      display       : inline-block;
+      border-radius : 5%;          /* 角丸       */
+      font-size     : 18pt;        /* 文字サイズ */
+      text-align    : center;      /* 文字位置   */
+      cursor        : pointer;     /* カーソル   */
+      padding       : 12px 12px;   /* 余白       */
+      background    : #000066;     /* 背景色     */
+      color         : #ffffff;     /* 文字色     */
+      line-height   : 1em;         /* 1行の高さ  */
+      transition    : .3s;         /* なめらか変化 */
+      box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
+      border        : 2px solid #000066;    /* 枠の指定 */
+    }
+.button:hover {
+   box-shadow    : none;        /* カーソル時の影消去 */
+   color         : #000066;     /* 背景色     */
+   background    : #ffffff;     /* 文字色     */
+}
+
 h3{
    color: #000000;
 }
