オムライス

--- a/public/css/user.css
+++ b/public/css/user.css
@@ -24,7 +24,8 @@ p{
    color: #000000;
 }
 h2{
-   margin-bottom: 10px;
+   /* margin-bottom: 10px; */
+   color: #000000;
 }
 .edit{
    display: flex;
@@ -42,19 +43,42 @@ h2{
       text-align    : center;      /* 文字位置   */
       cursor        : pointer;     /* カーソル   */
       padding       : 12px 12px;   /* 余白       */
-      background    : #000066;     /* 背景色     */
+      background    : #FD9940;     /* 背景色     */
       color         : #ffffff;     /* 文字色     */
       line-height   : 1em;         /* 1行の高さ  */
       transition    : .3s;         /* なめらか変化 */
       box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
-      border        : 2px solid #000066;    /* 枠の指定 */
-    }
+      border        : 2px solid #FD9940;    /* 枠の指定 */
+      }
 .button:hover {
-   box-shadow    : none;        /* カーソル時の影消去 */
-   color         : #000066;     /* 背景色     */
+   box-shadow    : none;        
+   color         : #FD9940;     /* 背景色     */
    background    : #ffffff;     /* 文字色     */
 }
 
 h3{
    color: #000000;
+}
+.human{
+   margin-top: 1rem;
+   color: #FD9940;
+}
+p{
+  color: #696969;
+}
+.hurt{
+   color: #FD9940;
+   margin-right: 10px;
+}
+.favoritebox{
+   display: flex;
+}
+.cardbox{
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+}
+.card{
+   color: #FD9940;
+   margin-right: 10px;
 }
