--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -1,11 +1,21 @@
 .menubox{
-   margin-top: 1rem;
    display: flex;
-   flex-direction: column;
-   justify-content: center;
+   flex-wrap: wrap;
+   justify-content: space-between;
+   flex-direction: row;
    align-items: center;
+   overflow: scroll;
 }
 img{
    width: 400px;
    height: 300px;
+}
+.menu{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   margin: 1rem 10px 0 10px;
+}
+footer{
+   height: 140px;
 }
