--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,43 +2,139 @@
     margin: 0;
     padding: 0;
 }
+.top{
+   font-size: 60px;
+   color: #FD9940;
+   font-family: Arvo;
+   font-weight: bold;
+   text-shadow:
+   -3px -3px 0 #222,
+   3px -3px 0 #222,
+   -3px 3px 0 #222,
+   3px 3px 0 #222,
+   4px 4px 0 #FD9940,
+   5px 5px 0 #FD9940,
+   6px 6px 0 #FD9940,
+   7px 7px 0 #FD9940;
+   line-height: 0.8em;
+   letter-spacing: 0.1em;
+   transform: scaleY(0.7);
+   -webkit-transform: scaleY(0.7);
+   -moz-transform: scaleY(0.7);
+}
 header{
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-    align-items: center;
-    padding: 8px 19px;
-    background:#FFF1AB;
-    border-top: solid 5px #FD9940;
-    border-bottom: solid 5px #FD9940;
- }
- .top{
-    font-size: 60px;
-    color: #FD9940;
-    font-family: Arvo;
-    font-weight: bold;
-    text-shadow:
-    -3px -3px 0 #222,
-    3px -3px 0 #222,
-    -3px 3px 0 #222,
-    3px 3px 0 #222,
-    4px 4px 0 #FD9940,
-    5px 5px 0 #FD9940,
-    6px 6px 0 #FD9940,
-    7px 7px 0 #FD9940;
-    line-height: 0.8em;
-    letter-spacing: 0.1em;
-    transform: scaleY(0.7);
-    -webkit-transform: scaleY(0.7);
-    -moz-transform: scaleY(0.7);
-    text-align: center;
- 
- }
- @media screen and (max-width:780px) {
-    .top{
-       font-size: 30px;
-       transform: scaleY(0.8);
-       -webkit-transform: scaleY(0.8);
-       -moz-transform: scaleY(0.8);
-    }
- }
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   align-items: center;
+   padding: 8px 19px;
+   background:#FFF1AB;
+   border-top: solid 5px #FD9940;
+   border-bottom: solid 5px #FD9940;
+}
+.login{
+   text-align: right;
+   color: #FD9940;
+}
+.reset{
+   text-align: right;
+   padding-right: 300px;
+   padding-top: 25px;
+}
+.reset-btn{
+   color: blue;
+}
+.search-condition{
+   text-align: center;
+}
+input{
+   text-align: left;
+}
+label{
+   font-size: 25px;
+}
+.btn1{
+   padding-top: 50px;
+}
+.search-btn{
+   display       : inline-block;
+   border-radius : 5%;          /* 角丸       */
+   font-size     : 18pt;        /* 文字サイズ */
+   text-align    : center;      /* 文字位置   */
+   cursor        : pointer;     /* カーソル   */
+   padding       : 12px 12px;   /* 余白       */
+   background    : #FD9940;     /* 背景色     */
+   color         : #ffffff;     /* 文字色     */
+   line-height   : 1em;         /* 1行の高さ  */
+   transition    : .3s;         /* なめらか変化 */
+   box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
+   border        : 2px solid #FD9940;    /* 枠の指定 */
+}
+.search-result{
+   text-align: center;
+}
+.search-message{
+   text-align: center;
+   background-color:  #FD9940;
+   font-weight: bold;
+}
+.menu-list{
+   text-align: center;
+}
+img{
+   width: 400px;
+   height: 300px;
+}
+.menubox{
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+   flex-direction: row;
+   align-items: center;
+   overflow: scroll;
+   padding-top: 50px;
+}
+.menu{
+   text-align: center;
+}
+.menu{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   margin: 1rem 10px 0 10px;
+}
+.underbar{
+   color: #FD9940;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-around;
+   background-color: #FD9940;
+   position: absolute;
+   bottom: 0; 
+   width: 100%;
+   height: 10%;
+   padding: 8px 0px;
+   background: #FFF1AB;
+   border-top: solid 5px #FD9940;
+   border-bottom: solid 5px #FD9940;
+   position: fixed;
+}
+.home{
+   color: #FD9940;
+   font-size: 20px;
+   margin-top: 25px;
+   
+}
+.search{
+   color: #FD9940;
+   font-size: 20px;
+   margin-top: 25px;
+}
+.account{
+   color: #FD9940;
+   font-size: 20px;
+   margin-top: 25px;
+}
+main{
+   height: 2000px;
+}
