--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -50,8 +50,8 @@ header{
 .login{
    margin-left: 42%;
    color: #FD9940;
-   display: flex;
-   flex-direction: column;
+   /* display: flex; */
+   /* flex-direction: column; */
 }
 .log{
    color: #FD9940;
