--- a/public/css/index.css
+++ b/public/css/index.css
@@ -138,3 +138,16 @@ img{
 main{
    height: 2000px;
 }
+.form{
+   height:23px;
+}
+
+.form{
+   height:23px;
+}
+.form-group1{
+   padding-top: 10px;
+}
+.form-group2{
+   padding-top: 10px;
+}
