--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -117,14 +117,37 @@ header{
 img{
    width: 400px;
    height: 300px;
-   border-radius: 50%;
+   border-radius: 10%;
 }
 body{
    background-color: #f0f0f0	;
 }
-.footer{
-   height: 140px;
-}
 .new{
    color: #FD9940;
+}
+
+.snow {
+   color: snow; 
+   font-size: 18px; 
+   position: fixed;
+   top: -5%; 
+   text-shadow:
+   5vw   -100px 2px,
+   10vw  -400px 3px,
+   20vw  -500px 4px,
+   30vw  -580px 1px,
+   39vw  -250px 2px,
+   42vw  -340px 5px,
+   56vw  -150px 2px,
+   63vw  -180px 0,
+   78vw  -220px 4px,
+   86vw  -320px 9px,
+   94vw  -170px 7px;
+   animation: anim 5s linear infinite;
+}
+@keyframes anim {
+   100% {
+      color: transparent;
+      top: 150%;
+   }
 }
