--- a/public/css/payment.css
+++ b/public/css/payment.css
@@ -1,9 +1,12 @@
-h1{
+.check{
     text-align: center;
+    padding-top: 30px;
 }
 .order-check{
     /* padding-top: 150px; */
     text-align: center;
+    font-weight: bold;
+    padding-top: 30px;
 }
 
 .order-amount{
@@ -14,30 +17,39 @@ h1{
     text-align: center;
     padding: 10px;
 }
-button{
-    text-align: center;
-    padding-top: 30px;
-    border-radius: 5px;
-    background-color: orange;
-    padding: 10px;
-    color: white;
-    width: 80px;
-    font-weight: bold;
-}
+
+.button{
+    display       : inline-block;
+    border-radius : 5%;          /* 角丸       */
+    font-size     : 10pt;        /* 文字サイズ */
+    text-align    : center;      /* 文字位置   */
+    cursor        : pointer;     /* カーソル   */
+    padding       : 12px 12px;   /* 余白       */
+    background    : #6699FF;     /* 背景色     */
+    color         : #ffffff;     /* 文字色     */
+    line-height   : 1em;         /* 1行の高さ  */
+    transition    : .3s;         /* なめらか変化 */
+    box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
+    border        : 2px solid #6699FF;    /* 枠の指定 */
+ }
 
 .payment-check{
     padding-top: 100px;
     text-align: center;
 }
 .button1{
-    text-align: center;
-    padding-top: 30px;
-    border-radius: 5px;
-    background-color: orange;
-    padding: 10px;
-    color: white;
-    width: 100px;
-    font-weight: bold;
+   display       : inline-block;
+   border-radius : 5%;          /* 角丸       */
+   font-size     : 10pt;        /* 文字サイズ */
+   text-align    : center;      /* 文字位置   */
+   cursor        : pointer;     /* カーソル   */
+   padding       : 12px 12px;   /* 余白       */
+   background    : #FD9940;     /* 背景色     */
+   color         : #ffffff;     /* 文字色     */
+   line-height   : 1em;         /* 1行の高さ  */
+   transition    : .3s;         /* なめらか変化 */
+   box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
+   border        : 2px solid #FD9940;    /* 枠の指定 */
 }
 .btn2{
     padding-top: 20px;
