--- a/public/css/restaurant.css
+++ b/public/css/restaurant.css
@@ -64,10 +64,52 @@ main{
 .edit-btn{
    text-align: center;
 }
+.edit-btn2{
+   display       : inline-block;
+   border-radius : 5%;          /* 角丸       */
+   font-size     : 18pt;        /* 文字サイズ */
+   text-align    : center;      /* 文字位置   */
+   cursor        : pointer;     /* カーソル   */
+   padding       : 12px 12px;   /* 余白       */
+   background    : #FD9940;     /* 背景色     */
+   color         : #ffffff;     /* 文字色     */
+   line-height   : 1em;         /* 1行の高さ  */
+   transition    : .3s;         /* なめらか変化 */
+   box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
+   border        : 2px solid #FD9940;    /* 枠の指定 */
+}
 .input{
    text-align: center;
    padding-top: 100px;
 }
 .update-btn{
    padding-top: 20px;
+}
+.update-btn2{
+   display       : inline-block;
+   border-radius : 5%;          /* 角丸       */
+   font-size     : 18pt;        /* 文字サイズ */
+   text-align    : center;      /* 文字位置   */
+   cursor        : pointer;     /* カーソル   */
+   padding       : 12px 12px;   /* 余白       */
+   background    : #FD9940;     /* 背景色     */
+   color         : #ffffff;     /* 文字色     */
+   line-height   : 1em;         /* 1行の高さ  */
+   transition    : .3s;         /* なめらか変化 */
+   box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
+   border        : 2px solid #FD9940;    /* 枠の指定 */
+}
+.delete-btn{
+   display       : inline-block;
+   border-radius : 5%;          /* 角丸       */
+   font-size     : 18pt;        /* 文字サイズ */
+   text-align    : center;      /* 文字位置   */
+   cursor        : pointer;     /* カーソル   */
+   padding       : 12px 12px;   /* 余白       */
+   background    : #FD9940;     /* 背景色     */
+   color         : #ffffff;     /* 文字色     */
+   line-height   : 1em;         /* 1行の高さ  */
+   transition    : .3s;         /* なめらか変化 */
+   box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
+   border        : 2px solid #FD9940;    /* 枠の指定 */
 }
