--- a/public/css/form.css
+++ b/public/css/form.css
@@ -2,6 +2,16 @@
    margin: 0;
    padding: 0;
 }
+.card{
+   text-align: center;
+   padding-top: 40px;
+}
+input{
+   height: 25px;
+}
+.form-group{
+   padding-top: 20px;
+}
 ul{
    list-style: none;
 }
@@ -89,4 +99,24 @@ header{
    color: #FD9940;
    font-size: 20px;
    margin-top: 25px;
+}
+.password-forget{
+   padding-top: 30px;
+}
+.restaurant-btn{
+   padding-top: 20px;
+}
+.btn1{
+   display       : inline-block;
+   border-radius : 5%;          /* 角丸       */
+   font-size     : 10pt;        /* 文字サイズ */
+   text-align    : center;      /* 文字位置   */
+   cursor        : pointer;     /* カーソル   */
+   padding       : 12px 12px;   /* 余白       */
+   background    : #FD9940;     /* 背景色     */
+   color         : #ffffff;     /* 文字色     */
+   line-height   : 1em;         /* 1行の高さ  */
+   transition    : .3s;         /* なめらか変化 */
+   box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
+   border        : 2px solid #FD9940;    /* 枠の指定 */
 }
