--- a/public/css/form.css
+++ b/public/css/form.css
@@ -123,3 +123,17 @@ header{
 body{
    height: 1000px;
 }
+.shop-btn{
+   display       : inline-block;
+   border-radius : 5%;          /* 角丸       */
+   font-size     : 15pt;        /* 文字サイズ */
+   text-align    : center;      /* 文字位置   */
+   cursor        : pointer;     /* カーソル   */
+   padding       : 12px 12px;   /* 余白       */
+   background    : #00CCFF;     /* 背景色     */
+   color         : #ffffff;     /* 文字色     */
+   line-height   : 1em;         /* 1行の高さ  */
+   transition    : .3s;         /* なめらか変化 */
+   box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
+   border        : 2px solid #00CCFF;    /* 枠の指定 */
+}
