--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -52,3 +52,25 @@ img{
    box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
    border        : 2px solid #6699FF;    /* 枠の指定 */
 }
+.order-table{
+   padding-top: 20px;
+   text-align: center;
+   padding-left: 465px;
+}
+table{
+   width: 50%;
+   border-collapse: collapse;
+   border: solid 2px orange;
+}
+table th{
+   color: #FF9800;
+   background: #fff5e5;
+   padding: 10px;
+}
+
+table th, table td{
+   border: dashed 1px orange;
+}
+table td {
+   padding: 3px 10px;
+}
