--- a/public/css/index.css
+++ b/public/css/index.css
@@ -136,7 +136,7 @@ img{
    margin-top: 25px;
 }
 main{
-   height: 2000px;
+   height: 2500px;
 }
 .form{
    height:23px;
@@ -165,4 +165,28 @@ main{
    box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
    border        : 2px solid #FD9940;    /* 枠の指定 */
    font-weight: bold;
+}
+.order-btn1{
+   padding-top: 10px;
+}
+.order-table{
+   padding-top: 20px;
+   text-align: center;
+}
+table{
+   width: 350px;
+   border-collapse: collapse;
+   border: solid 2px orange;
+}
+table th{
+   color: #FF9800;
+   background: #fff5e5;
+   padding: 10px;
+}
+
+table th, table td{
+   border: dashed 1px orange;
+}
+table td {
+   padding: 3px 10px;
 }
