--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -40,3 +40,27 @@ footer{
    box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
    border        : 2px solid #FD9940;    /* 枠の指定 */
 }
+.order-btn1{
+   padding-top: 10px;
+}
+.order-table{
+   padding-top: 20px;
+   text-align: center;
+}
+table{
+   width: 350px;
+   border-collapse: collapse;
+   border: solid 2px orange;
+}
+table th{
+   color: #FF9800;
+   background: #fff5e5;
+   padding: 10px;
+}
+
+table th, table td{
+   border: dashed 1px orange;
+}
+table td {
+   padding: 3px 10px;
+}
