--- a/public/css/favorite.css
+++ b/public/css/favorite.css
@@ -59,3 +59,55 @@ footer{
 body{
    background-color: #f0f0f0	;
 }
+.order-table{
+   text-align: center;
+   padding-bottom: 100px;
+   padding-top: 20px;
+}
+table th{
+   color: #FF9800;
+   background: #fff5e5;
+   padding: 10px;
+}
+table{
+   border-collapse: collapse;
+   border: solid 2px orange;
+   width:350px;
+}
+table th, table td{
+   border: dashed 1px orange;
+}
+table td {
+   padding: 3px 10px;
+}
+.order-btn{
+   display       : inline-block;
+   border-radius : 5%;          /* 角丸       */
+   font-size     : 10pt;        /* 文字サイズ */
+   text-align    : center;      /* 文字位置   */
+   cursor        : pointer;     /* カーソル   */
+   padding       : 12px 12px;   /* 余白       */
+   background    : #FD9940;     /* 背景色     */
+   color         : #ffffff;     /* 文字色     */
+   line-height   : 1em;         /* 1行の高さ  */
+   transition    : .3s;         /* なめらか変化 */
+   box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
+   border        : 2px solid #FD9940;    /* 枠の指定 */
+}
+.order-btn1{
+   padding-top: 10px;
+}
+.favorite{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   margin: 1rem 10px 0 10px;
+}
+.favoritebox{
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+   flex-direction: row;
+   align-items: center;
+   overflow: scroll;
+}
