--- a/public/css/form.css
+++ b/public/css/form.css
@@ -121,6 +121,7 @@ header{
    border        : 2px solid #FD9940;    /* 枠の指定 */
 }
 body{
+   background-color: #f0f0f0;
    height: 1000px;
 }
 .shop-btn{
