注文履歴と今日の注文履歴を表示。SuiSuiアプリ全て完成。

--- a/public/css/restaurant.css
+++ b/public/css/restaurant.css
@@ -64,21 +64,22 @@ main{
 }
 .edit-btn{
    text-align: center;
+   padding-top: 10px;
 }
 .edit-btn2{
-   display       : inline-block;
-   border-radius : 5%;          /* 角丸       */
-   font-size     : 18pt;        /* 文字サイズ */
-   text-align    : center;      /* 文字位置   */
-   cursor        : pointer;     /* カーソル   */
-   padding       : 12px 12px;   /* 余白       */
-   background    : #FD9940;     /* 背景色     */
-   color         : #ffffff;     /* 文字色     */
-   line-height   : 1em;         /* 1行の高さ  */
-   transition    : .3s;         /* なめらか変化 */
-   box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
-   border        : 2px solid #FD9940;    /* 枠の指定 */
+   display: inline-block;
+   padding: 0.5em 1em;
+   text-decoration: none;
+   background: #668ad8;/*ボタン色*/
+   color: #FFF;
+   border-bottom: solid 4px #627295;
+   border-radius: 3px;
 }
+.edit-btn2:active {
+   -webkit-transform: translateY(4px);
+   transform: translateY(4px);
+   border-bottom: none;
+ }
 .input{
    text-align: center;
    padding-top: 100px;
@@ -87,36 +88,36 @@ main{
    padding-top: 20px;
 }
 .update-btn2{
-   display       : inline-block;
-   border-radius : 5%;          /* 角丸       */
-   font-size     : 18pt;        /* 文字サイズ */
-   text-align    : center;      /* 文字位置   */
-   cursor        : pointer;     /* カーソル   */
-   padding       : 12px 12px;   /* 余白       */
-   background    : #FD9940;     /* 背景色     */
-   color         : #ffffff;     /* 文字色     */
-   line-height   : 1em;         /* 1行の高さ  */
-   transition    : .3s;         /* なめらか変化 */
-   box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
-   border        : 2px solid #FD9940;    /* 枠の指定 */
+   display: inline-block;
+   padding: 0.5em 1em;
+   text-decoration: none;
+   background: #668ad8;/*ボタン色*/
+   color: #FFF;
+   border-bottom: solid 4px #627295;
+   border-radius: 3px;
+}
+.update-btn2::active {
+   -webkit-transform: translateY(4px);
+   transform: translateY(4px);
+   border-bottom: none;
 }
 .delete-btn{
-   display       : inline-block;
-   border-radius : 5%;          /* 角丸       */
-   font-size     : 18pt;        /* 文字サイズ */
-   text-align    : center;      /* 文字位置   */
-   cursor        : pointer;     /* カーソル   */
-   padding       : 12px 12px;   /* 余白       */
-   background    : #FD9940;     /* 背景色     */
-   color         : #ffffff;     /* 文字色     */
-   line-height   : 1em;         /* 1行の高さ  */
-   transition    : .3s;         /* なめらか変化 */
-   box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
-   border        : 2px solid #FD9940;    /* 枠の指定 */
+   display: inline-block;
+  padding: 0.5em 1em;
+  text-decoration: none;
+  background: #668ad8;/*ボタン色*/
+  color: #FFF;
+  border-bottom: solid 4px #627295;
+  border-radius: 3px;
 }
+.delte-btn:active {
+   -webkit-transform: translateY(4px);
+   transform: translateY(4px);
+   border-bottom: none;
+ }
 .order-table{
    text-align: center;
-   padding-bottom: 100px;
+   /* padding-bottom: 100px; */
    padding-top: 20px;
 }
 table th{
@@ -134,4 +135,17 @@ table th, table td{
 }
 table td {
    padding: 3px 10px;
+}
+.d-btn{
+   padding-left: 60px;
+}
+.size{
+   font-size: 80px;
+}
+h3{
+   padding-top: 30px;
+}
+.restaurant_edit{
+   text-align: center;
+   padding-top: 20px;
 }
