--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -1,3 +1,16 @@
 footer{
     display: none;
 }
+.check-btn{
+    display: flex;
+}
+
+
+@media screen and (max-width: 375px) {
+	.card-header{
+        font-size: 20px;
+    }
+    .container{
+        height: 300px;
+    }
+}
