--- a/public/css/favorite.css
+++ b/public/css/favorite.css
@@ -111,3 +111,15 @@ table td {
    align-items: center;
    overflow: scroll;
 }
+@media screen and (max-width: 375px) {
+   h1{
+      font-size: 20px;
+   }
+   img{
+      width: 300px;
+      height: 250px;
+   }
+   table{
+      width: 350px;
+   }
+}
