--- a/public/css/form.css
+++ b/public/css/form.css
@@ -126,15 +126,15 @@ body{
 }
 .shop-btn{
    display       : inline-block;
-   border-radius : 5%;          /* 角丸       */
-   font-size     : 15pt;        /* 文字サイズ */
-   text-align    : center;      /* 文字位置   */
-   cursor        : pointer;     /* カーソル   */
-   padding       : 12px 12px;   /* 余白       */
-   background    : #00CCFF;     /* 背景色     */
-   color         : #ffffff;     /* 文字色     */
-   line-height   : 1em;         /* 1行の高さ  */
-   transition    : .3s;         /* なめらか変化 */
-   box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
-   border        : 2px solid #00CCFF;    /* 枠の指定 */
+   border-radius : 5%;          
+   font-size     : 15pt;       
+   text-align    : center;      
+   cursor        : pointer;  
+   padding       : 12px 12px;   
+   background    : #00CCFF; 
+   color         : #ffffff;     
+   line-height   : 1em;       
+   transition    : .3s;      
+   box-shadow    : 6px 6px 3px #666666; 
+   border        : 2px solid #00CCFF; 
 }
