--- a/public/css/index.css
+++ b/public/css/index.css
@@ -58,17 +58,17 @@ label{
 }
 .search-btn{
    display       : inline-block;
-   border-radius : 5%;          /* 角丸       */
-   font-size     : 18pt;        /* 文字サイズ */
-   text-align    : center;      /* 文字位置   */
-   cursor        : pointer;     /* カーソル   */
-   padding       : 12px 12px;   /* 余白       */
-   background    : #FD9940;     /* 背景色     */
-   color         : #ffffff;     /* 文字色     */
-   line-height   : 1em;         /* 1行の高さ  */
-   transition    : .3s;         /* なめらか変化 */
-   box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
-   border        : 2px solid #FD9940;    /* 枠の指定 */
+   border-radius : 5%;         
+   font-size     : 18pt;       
+   text-align    : center;     
+   cursor        : pointer;    
+   padding       : 12px 12px;   
+   background    : #FD9940;   
+   color         : #ffffff;     
+   line-height   : 1em;       
+   transition    : .3s;        
+   box-shadow    : 6px 6px 3px #666666; 
+   border        : 2px solid #FD9940;   
 }
 .search-result{
    text-align: center;
@@ -136,7 +136,7 @@ img{
    margin-top: 25px;
 }
 main{
-   height: 2500px;
+   height: 3000px;
 }
 body{
    background-color: #f0f0f0;
@@ -156,17 +156,17 @@ body{
 }
 .order-btn{
    display       : inline-block;
-   border-radius : 5%;          /* 角丸       */
-   font-size     : 10pt;        /* 文字サイズ */
-   text-align    : center;      /* 文字位置   */
-   cursor        : pointer;     /* カーソル   */
-   padding       : 12px 12px;   /* 余白       */
-   background    : #FD9940;     /* 背景色     */
-   color         : #ffffff;     /* 文字色     */
-   line-height   : 1em;         /* 1行の高さ  */
-   transition    : .3s;         /* なめらか変化 */
-   box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
-   border        : 2px solid #FD9940;    /* 枠の指定 */
+   border-radius : 5%;          
+   font-size     : 10pt;      
+   text-align    : center;     
+   cursor        : pointer;    
+   padding       : 12px 12px;   
+   background    : #FD9940;    
+   color         : #ffffff;    
+   line-height   : 1em;       
+   transition    : .3s;        
+   box-shadow    : 6px 6px 3px #666666; 
+   border        : 2px solid #FD9940;   
    font-weight: bold;
 }
 .order-btn1{
@@ -192,4 +192,57 @@ table th, table td{
 }
 table td {
    padding: 3px 10px;
+}
+
+@media screen and (max-width: 375px) {
+   .search-input{
+      font-size: 20px;
+   }
+   label{
+      font-size: 15px;
+   }
+   img{
+      width: 300px;
+      height: 250px;
+   }
+   table{
+      width: 350px;
+   }
+   .search-btn{
+      display       : inline-block;
+      border-radius : 5%;         
+      font-size     : 10pt;       
+      text-align    : center;     
+      cursor        : pointer;    
+      padding       : 12px 12px;   
+      background    : #FD9940;   
+      color         : #ffffff;     
+      line-height   : 1em;       
+      transition    : .3s;        
+      box-shadow    : 6px 6px 3px #666666; 
+      border        : 2px solid #FD9940;   
+   }
+   .menu-list{
+      font-size: 20px;
+   }
+   .reset{
+      padding-right: 10px;
+      padding-bottom: 10px;
+   }
+   .underbar{
+      color: #FD9940;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      background-color: #FD9940;
+      position: absolute;
+      bottom: 0; 
+      width: 100%;
+      height: 10%;
+      padding: 8px 0px;
+      background: #FFF1AB;
+      border-top: solid 5px #FD9940;
+      border-bottom: solid 5px #FD9940;
+      position: fixed;
+   }
 }
