--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -14,6 +14,18 @@ img{
    width: 400px;
    height: 300px;
 }
+@media screen and (max-width: 375px) {
+   .index{
+      font-size: 20px;
+   }
+   img{
+      width: 300px;
+      height: 250px;
+   }
+   table{
+      width: 200px;
+   }
+}
 .menu{
    display: flex;
    flex-direction: column;
