--- a/public/css/user.css
+++ b/public/css/user.css
@@ -94,3 +94,8 @@ body{
    background-color: #f0f0f0	;
    height: 1000px;
 }
+@media screen and (max-width: 375px) {
+   main{
+      font-size: 13px;
+   }
+}
