--- a/public/css/user_orderhistory.css
+++ b/public/css/user_orderhistory.css
@@ -1,6 +1,12 @@
 .title{
     text-align: center;
 }
+@media screen and (max-width: 375px) {
+   .title{
+      font-size: 20px;
+      padding-top: 30px;
+  }
+}
 .menu > img{
     text-align: center;
     width: 300px;
