--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -204,5 +204,50 @@ body:before{
    bottom: -100px;
    z-index: -1;
 }
-
+@media screen and (max-width: 375px) {
+	.title > h1{
+      font-size: 20px;
+   }
+   h2{
+      font-size: 30px;
+      color: #FD9940;
+   }
+   h3{
+      font-size: 20px;
+   }
+   body{
+      background: url(../images/pexels-ella-olsson-1640774.jpg) no-repeat center;
+      background-size: cover;
+      z-index: 0;
+      overflow: hidden;
+   }
+   .log{
+      color: #FD9940;
+      font-weight: bold;
+      border-top-left-radius: 10px;
+      border-bottom-left-radius: 10px;
+      border-top-right-radius: 10px;
+      border-bottom-right-radius: 10px;
+      padding-left: 30px;
+      width: 100px;
+      font-size: 1.1rem;
+      padding: 16px 0;
+      border: 1px solid orange;
+      /* display: inline-block; */
+   }
+   .sign{
+      color: #FD9940;
+      font-weight: bold;
+      border-top-left-radius: 10px;
+      border-bottom-left-radius: 10px;
+      border-top-right-radius: 10px;
+      border-bottom-right-radius: 10px;
+      padding-left: 30px;
+      width: 100px;
+      font-size: 1.1rem;
+      padding:16px 0;
+      border: 1px solid orange;
+      display: inline-block;
+   }
+}
 
