--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -74,3 +74,24 @@ table th, table td{
 table td {
    padding: 3px 10px;
 }
+
+@media screen and (max-width: 375px) {
+h1{
+   font-size: 20px;
+   padding-top: 30px;
+}
+img{
+   width: 300px;
+   height: 250px;
+}
+.order-table{
+   padding-top: 20px;
+   text-align: center;
+   padding-left: 20px;
+}
+table{
+   width: 100%;
+   text-align: center;
+   padding-right: 10px;
+}
+}
