--- a/public/css/payment_finish.css
+++ b/public/css/payment_finish.css
@@ -5,3 +5,12 @@ h1{
     text-align: center;
     padding-top: 150px;
 }
+@media screen and (max-width: 375px) {
+    h1{
+       font-size: 20px;
+       padding-top: 30px;
+    }
+    .payment-finish{
+        padding-top: 50px;
+    }
+}
