--- a/public/css/user.css
+++ b/public/css/user.css
@@ -57,8 +57,8 @@ h2{
       }
 .button:hover {
    box-shadow    : none;        
-   color         : #FD9940;     /* 背景色     */
-   background    : #ffffff;     /* 文字色     */
+   color         : #FD9940;    
+   background    : #ffffff;   
 }
 
 h3{
