インデント

--- a/public/css/user.css
+++ b/public/css/user.css
@@ -75,6 +75,10 @@ p{
    color: #FD9940;
    margin-right: 10px;
 }
+.book{
+   color: #FD9940;
+   margin-right: 10px;
+}
 .favoritebox{
    display: flex;
 }
